--- a/pom.xml
+++ b/pom.xml
@@ -8,12 +8,13 @@
   -->
   
     <parent>
-      <groupId>org.eclipse.hudson.plugins</groupId>
+      <groupId>org.hudsonci.plugins</groupId>
       <artifactId>analysis-pom</artifactId>
       <version>3.0.0-SNAPSHOT</version>
       <relativePath>../analysis-pom/pom.xml</relativePath>
     </parent>
 
+    <groupId>org.hudsonci.plugins</groupId>
     <artifactId>tasks</artifactId>
     <packaging>hpi</packaging>
     <name>Task Scanner Plug-in</name>
@@ -47,7 +48,7 @@
 
   <dependencies>
     <dependency>
-      <groupId>org.eclipse.hudson.plugins</groupId>
+      <groupId>org.hudsonci.plugins</groupId>
       <artifactId>analysis-core</artifactId>
       <version>1.42-SNAPSHOT</version>
     </dependency>
@@ -59,19 +60,6 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
-
-  <repositories>
-    <repository>
-      <releases>
-        <enabled>true</enabled>
-      </releases>
-      <snapshots>
-        <enabled>false</enabled>
-      </snapshots>
-      <id>repo.jenkins-ci.org</id>
-      <url>http://repo.jenkins-ci.org/public/</url>
-    </repository>
-  </repositories>
 
 </project>  
 
