--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <parent>
       <groupId>org.hudsonci.plugins</groupId>
       <artifactId>analysis-pom</artifactId>
-      <version>3.0.0-SNAPSHOT</version>
+      <version>3.0.0-M2-1</version>
       <relativePath>../analysis-pom/pom.xml</relativePath>
     </parent>
 
@@ -25,9 +25,9 @@
     <url>http://wiki.hudson-ci.org/display/HUDSON/Static+Code+Analysis+Plug-ins</url>
   
     <scm>
-        <connection>scm:git:git://github.com/hudson-plugins/${project.artifactId}-plugin.git</connection>
-        <developerConnection>scm:git:git@github.com:hudson-plugins/${project.artifactId}-plugin.git</developerConnection>
-        <url>https://github.com/hudson-plugins/${project.artifactId}-plugin</url>
+        <connection>scm:git:git://github.com/hudson3-plugins/${project.artifactId}-plugin.git</connection>
+        <developerConnection>scm:git:git@github.com:hudson3-plugins/${project.artifactId}-plugin.git</developerConnection>
+        <url>https://github.com/hudson3-plugins/${project.artifactId}-plugin</url>
     </scm>
   
    <licenses>
@@ -45,6 +45,10 @@
       <comments>All YUI source code is under the BSD license.</comments>
     </license>
   </licenses>
+
+  <properties>
+    <hudsonTags>recommended,report</hudsonTags>
+  </properties>
 
   <dependencies>
     <dependency>
