--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,18 @@
       <!--version>1.4</version-->
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>xerces</groupId>
+      <artifactId>xercesImpl</artifactId>
+      <version>2.8.1</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>xml-apis</groupId>
+      <artifactId>xml-apis</artifactId>
+      <version>1.3.03</version>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
 
 </project>  
