--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <parent>
       <groupId>org.hudsonci.plugins</groupId>
       <artifactId>analysis-pom</artifactId>
-      <version>3.0.0-SNAPSHOT</version>
+      <version>3.0.0-M3</version>
       <relativePath>../analysis-pom/pom.xml</relativePath>
     </parent>
 
@@ -18,7 +18,7 @@
     <artifactId>tasks</artifactId>
     <packaging>hpi</packaging>
     <name>Task Scanner Plug-in</name>
-    <version>4.31-h-1-SNAPSHOT</version>
+    <version>4.31-h-1</version>
     <description>This plug-in scans the workspace files for open tasks
       and generates a trend report.</description>
 
@@ -54,7 +54,7 @@
     <dependency>
       <groupId>org.hudsonci.plugins</groupId>
       <artifactId>analysis-core</artifactId>
-      <version>1.42-h-1-SNAPSHOT</version>
+      <version>1.42-h-1</version>
     </dependency>
     <dependency>
       <groupId>org.jvnet.hudson.plugins</groupId>
