[maven-release-plugin] prepare for next development iteration

--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
   <artifactId>tasks</artifactId>
   <packaging>hpi</packaging>
   <name>Task Scanner Plug-in</name>
-  <version>4.35-h-1</version>
+  <version>4.35-h-2-SNAPSHOT</version>
   <url>http://wiki.hudson-ci.org/x/XoAs</url>
   <description>This plug-in scans the workspace files for open tasks
     and generates a trend report.</description>
